<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/myaccount_gamertag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/Header" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/myaccount_gamertag"
        android:columnCount="2" >

        <TextView
            android:id="@+id/myaccount_fnamelabel"
            android:layout_gravity="left"
            android:text="@string/firstname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/myaccount_fnamefield"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/myaccount_lnamelabel"
            android:layout_gravity="left"
            android:text="@string/lastname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/myaccount_lnamefield"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/myaccount_emaillabel"
            android:layout_gravity="left"
            android:text="@string/email_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/myaccount_emailfield"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <Button
        android:id="@+id/game_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gridLayout1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/myaccout_update" />

</RelativeLayout>
