<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/about.description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="CS 360: Distributed Application Engineering"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/about.us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/about.description"
        android:text="@string/us" />

    <TextView
        android:id="@+id/myaccount_fnamefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/about.us"
        android:gravity="center_horizontal"
        android:text="@string/about_roles"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/myaccount_gamertag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myaccount_fnamefield"
        android:text="@string/roles"
        android:textSize="20dp" />

</RelativeLayout>
