<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:gravity="fill_horizontal"
    android:longClickable="false"
    android:paddingLeft="0dp"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbarStyle="insideOverlay"
    tools:ignore="HardcodedText" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game.rating"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:paddingLeft="25dp" >

        <TextView
            android:id="@+id/game.releaseDateLabel"
            android:layout_gravity="left"
            android:text="@string/releaseDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.releaseDateField"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="11/19/2013"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.versionLabel"
            android:layout_gravity="left"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.versionField"
            android:layout_gravity="left"
            android:text="1.0.15"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.downloads"
            android:layout_gravity="left"
            android:text="@string/downloads"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.downloadsField"
            android:layout_gravity="left"
            android:text="1,000,000+"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/game.gamesPlayed"
            android:layout_gravity="left"
            android:text="@string/gamesPlayed"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fill_warning"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="50,124,523"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <RatingBar
        android:id="@+id/game.rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/game.company"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.5" 
        android:isIndicator="true"/>

    <TextView
        android:id="@+id/game.description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gridLayout1"
        android:gravity="center"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/game.descriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_install"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/game.description"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        android:padding="@dimen/fivedp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="@string/sampleDescription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <TextView
        android:id="@+id/game.gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Game Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/game.company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/game.gameName"
        android:text="Company Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/game.ratingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/game.rating"
        android:layout_toRightOf="@+id/game.rating"
        android:gravity="center"
        android:text="4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/ratingSize" />

    <Button
        android:id="@+id/game_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Install" />

</RelativeLayout>